added warnings for emails and address not added to list

--- a/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
+++ b/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
@@ -48,6 +48,7 @@
                                     {
                                         <span class="badge badge-info m-l-10"> @emailAddress.Type</span>
                                     }
+                                    //Added the following
                                     else if (emailAddress.Type == EmailType.Primary)
                                     {
                                         <span class="badge badge-primary m-l-10"> @emailAddress.Type</span>
@@ -80,6 +81,9 @@
                     <option value="Personal">Personal</option>
                     <option value="Business">Business</option>
                 </select>
+                <div id="inputEmailFeedback" class="invalidMessage text-right">
+                    Add your inputted email!
+                </div>
             </div>
             <div class="form-group col-md-2">
                 <button id="addNewEmail" class="btn btn-info">Add</button>
@@ -149,6 +153,9 @@
                     <option value="Primary">Primary</option>
                     <option value="Business">Business</option>
                 </select>
+                <div id="inputAddressFeedback" class="invalidMessage addressFeedback text-nowrap">
+                    Add your inputted address!
+                </div>
             </div>
             <div class="form-group col-md-2">
                 <button id="addNewAddress" class="btn btn-info">Add</button>
