Add comments to what I changed

--- a/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
+++ b/ContactManagerStarter/Views/Contacts/_EditContact.cshtml
@@ -77,10 +77,12 @@
             </div>
             <div class="form-group col-md-4">
                 <select id="newEmailAddressType" class="form-control">
+                    @*Added primary email*@
                     <option value="Primary">Primary</option>
                     <option value="Personal">Personal</option>
                     <option value="Business">Business</option>
                 </select>
+                @*Added the following*@
                 <div id="inputEmailFeedback" class="invalidMessage text-right">
                     Add your inputted email!
                 </div>
@@ -153,6 +155,7 @@
                     <option value="Primary">Primary</option>
                     <option value="Business">Business</option>
                 </select>
+                @*added the following*@
                 <div id="inputAddressFeedback" class="invalidMessage addressFeedback text-nowrap">
                     Add your inputted address!
                 </div>
